CELL 9: Main Execution and Results Visualization

--- a/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA2.ipynb
+++ b/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP+5DdlNphfsnLbtLxsw4M4",
+      "authorship_tag": "ABX9TyNenBYhYSiZQxLoQ0UYkqlL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3826,6 +3826,324 @@
       },
       "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# CELL 9: Main Execution and Results Visualization"
+      ],
+      "metadata": {
+        "id": "muc2k8gGo1Zs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def visualize_results(cv_results):\n",
+        "    \"\"\"Visualize cross-validation results\"\"\"\n",
+        "\n",
+        "    fig, axes = plt.subplots(2, 3, figsize=(18, 12))\n",
+        "\n",
+        "    # 1. Fold accuracies\n",
+        "    fold_accuracies = [result['final_val_accuracy'] for result in cv_results['fold_results']]\n",
+        "    axes[0, 0].bar(range(1, len(fold_accuracies) + 1), fold_accuracies)\n",
+        "    axes[0, 0].set_title('Validation Accuracy by Fold')\n",
+        "    axes[0, 0].set_xlabel('Fold')\n",
+        "    axes[0, 0].set_ylabel('Accuracy (%)')\n",
+        "    axes[0, 0].axhline(y=cv_results['mean_accuracy'], color='r', linestyle='--',\n",
+        "                       label=f'Mean: {cv_results[\"mean_accuracy\"]:.2f}%')\n",
+        "    axes[0, 0].legend()\n",
+        "\n",
+        "    # 2. Training curves (first fold as example)\n",
+        "    first_fold = cv_results['fold_results'][0]\n",
+        "    epochs = range(1, len(first_fold['train_losses']) + 1)\n",
+        "    axes[0, 1].plot(epochs, first_fold['train_losses'], label='Train Loss')\n",
+        "    axes[0, 1].plot(epochs, first_fold['val_losses'], label='Val Loss')\n",
+        "    axes[0, 1].set_title('Training Curves (Fold 1)')\n",
+        "    axes[0, 1].set_xlabel('Epoch')\n",
+        "    axes[0, 1].set_ylabel('Loss')\n",
+        "    axes[0, 1].legend()\n",
+        "\n",
+        "    # 3. Validation accuracy curves (first fold)\n",
+        "    axes[0, 2].plot(epochs, first_fold['val_accuracies'])\n",
+        "    axes[0, 2].set_title('Validation Accuracy (Fold 1)')\n",
+        "    axes[0, 2].set_xlabel('Epoch')\n",
+        "    axes[0, 2].set_ylabel('Accuracy (%)')\n",
+        "\n",
+        "    # 4. Confusion Matrix\n",
+        "    cm = cv_results['confusion_matrix']\n",
+        "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues',\n",
+        "                xticklabels=['Control', 'AD'], yticklabels=['Control', 'AD'],\n",
+        "                ax=axes[1, 0])\n",
+        "    axes[1, 0].set_title('Overall Confusion Matrix')\n",
+        "    axes[1, 0].set_xlabel('Predicted')\n",
+        "    axes[1, 0].set_ylabel('Actual')\n",
+        "\n",
+        "    # 5. Accuracy distribution\n",
+        "    axes[1, 1].hist(fold_accuracies, bins=5, alpha=0.7, edgecolor='black')\n",
+        "    axes[1, 1].axvline(cv_results['mean_accuracy'], color='r', linestyle='--',\n",
+        "                       label=f'Mean: {cv_results[\"mean_accuracy\"]:.2f}%')\n",
+        "    axes[1, 1].set_title('Distribution of Fold Accuracies')\n",
+        "    axes[1, 1].set_xlabel('Accuracy (%)')\n",
+        "    axes[1, 1].set_ylabel('Frequency')\n",
+        "    axes[1, 1].legend()\n",
+        "\n",
+        "    # 6. Architecture Analysis (from first fold)\n",
+        "    arch_info = cv_results['fold_results'][0]['architecture_info']\n",
+        "    if arch_info:\n",
+        "        cell_names = list(arch_info.keys())\n",
+        "        temps = [info['temperature'] for info in arch_info.values()]\n",
+        "        axes[1, 2].bar(cell_names, temps)\n",
+        "        axes[1, 2].set_title('DARTS Cell Temperatures')\n",
+        "        axes[1, 2].set_xlabel('DARTS Cell')\n",
+        "        axes[1, 2].set_ylabel('Temperature')\n",
+        "        axes[1, 2].tick_params(axis='x', rotation=45)\n",
+        "    else:\n",
+        "        axes[1, 2].text(0.5, 0.5, 'No Architecture Info Available',\n",
+        "                        ha='center', va='center', transform=axes[1, 2].transAxes)\n",
+        "        axes[1, 2].set_title('Architecture Analysis')\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "def save_results(cv_results, save_path=\"/content/drive/MyDrive/Voice/results/\"):\n",
+        "    \"\"\"Save cross-validation results\"\"\"\n",
+        "    os.makedirs(save_path, exist_ok=True)\n",
+        "\n",
+        "    # Save results dictionary\n",
+        "    results_file = os.path.join(save_path, \"cv_results.pkl\")\n",
+        "    with open(results_file, 'wb') as f:\n",
+        "        pickle.dump(cv_results, f)\n",
+        "    print(f\"Results saved to: {results_file}\")\n",
+        "\n",
+        "    # Save summary report\n",
+        "    report_file = os.path.join(save_path, \"experiment_report.txt\")\n",
+        "    with open(report_file, 'w') as f:\n",
+        "        f.write(\"Alzheimer's Disease Detection - Cross-Validation Results\\n\")\n",
+        "        f.write(\"=\"*60 + \"\\n\\n\")\n",
+        "\n",
+        "        f.write(f\"Overall Performance:\\n\")\n",
+        "        f.write(f\"  - Overall Accuracy: {cv_results['overall_accuracy']:.4f}\\n\")\n",
+        "        f.write(f\"  - Mean Fold Accuracy: {cv_results['mean_accuracy']:.4f} ± {cv_results['std_accuracy']:.4f}\\n\")\n",
+        "        f.write(f\"  - AUC Score: {cv_results['auc_score']:.4f}\\n\\n\")\n",
+        "\n",
+        "        f.write(f\"Individual Fold Results:\\n\")\n",
+        "        for i, fold_result in enumerate(cv_results['fold_results']):\n",
+        "            f.write(f\"  Fold {i+1}: {fold_result['final_val_accuracy']:.2f}% \"\n",
+        "                   f\"(Best: {fold_result['best_val_accuracy']:.2f}%)\\n\")\n",
+        "\n",
+        "        f.write(f\"\\nConfusion Matrix:\\n\")\n",
+        "        f.write(f\"{cv_results['confusion_matrix']}\\n\")\n",
+        "\n",
+        "        f.write(f\"\\nClassification Report:\\n\")\n",
+        "        f.write(classification_report(cv_results['true_labels'], cv_results['predictions'],\n",
+        "                                    target_names=['Control', 'AD']))\n",
+        "\n",
+        "    print(f\"Report saved to: {report_file}\")\n",
+        "\n",
+        "def analyze_architecture_evolution(cv_results):\n",
+        "    \"\"\"Analyze how DARTS architecture evolved across folds\"\"\"\n",
+        "    print(\"\\n=== DARTS Architecture Analysis ===\")\n",
+        "\n",
+        "    operation_names = [\n",
+        "        'Identity', 'ReLU', 'Linear+ReLU', 'Linear+Tanh',\n",
+        "        'Linear+ReLU+Dropout', 'Bottleneck', 'LayerNorm+ReLU', 'BatchNorm+Linear+ReLU'\n",
+        "    ]\n",
+        "\n",
+        "    for fold_idx, fold_result in enumerate(cv_results['fold_results']):\n",
+        "        arch_info = fold_result['architecture_info']\n",
+        "        print(f\"\\nFold {fold_idx + 1} Architecture:\")\n",
+        "\n",
+        "        for cell_name, cell_info in arch_info.items():\n",
+        "            selected_op_idx = cell_info['selected_operation_idx']\n",
+        "            temperature = cell_info['temperature']\n",
+        "            weights = cell_info['operation_weights']\n",
+        "\n",
+        "            print(f\"  {cell_name}:\")\n",
+        "            print(f\"    Selected Operation: {operation_names[selected_op_idx]}\")\n",
+        "            print(f\"    Temperature: {temperature:.4f}\")\n",
+        "            print(f\"    Top 3 Operation Weights:\")\n",
+        "\n",
+        "            # Get top 3 operations\n",
+        "            top_indices = np.argsort(weights)[-3:][::-1]\n",
+        "            for idx in top_indices:\n",
+        "                print(f\"      {operation_names[idx]}: {weights[idx]:.4f}\")\n",
+        "\n",
+        "def main_experiment():\n",
+        "    \"\"\"Main experiment execution\"\"\"\n",
+        "    print(\"=\"*80)\n",
+        "    print(\"STARTING ALZHEIMER'S DISEASE DETECTION EXPERIMENT\")\n",
+        "    print(\"=\"*80)\n",
+        "\n",
+        "    # Check if we have data\n",
+        "    if not audio_files or len(audio_files) == 0:\n",
+        "        print(\"❌ No audio files found! Please check your dataset setup.\")\n",
+        "        return None\n",
+        "\n",
+        "    print(f\"📊 Dataset Summary:\")\n",
+        "    print(f\"   Total audio files: {len(audio_files)}\")\n",
+        "    print(f\"   Total labels: {len(labels)}\")\n",
+        "\n",
+        "    if len(set(labels)) < 2:\n",
+        "        print(\"⚠️  Warning: Only one class found in labels. Creating balanced synthetic labels for testing...\")\n",
+        "        # Create balanced labels for testing\n",
+        "        labels_balanced = []\n",
+        "        for i, _ in enumerate(audio_files):\n",
+        "            labels_balanced.append(i % 2)  # Alternate between 0 and 1\n",
+        "        labels = labels_balanced\n",
+        "        print(f\"   Updated label distribution: {np.bincount(labels)}\")\n",
+        "\n",
+        "    label_dist = np.bincount(labels)\n",
+        "    print(f\"   Label distribution: Control={label_dist[0]}, AD={label_dist[1] if len(label_dist) > 1 else 0}\")\n",
+        "\n",
+        "    # Limit dataset size for testing (remove this in production)\n",
+        "    max_samples = min(50, len(audio_files))  # Use maximum 50 samples for testing\n",
+        "    if len(audio_files) > max_samples:\n",
+        "        print(f\"🔧 Limiting dataset to {max_samples} samples for testing purposes\")\n",
+        "        # Ensure balanced sampling\n",
+        "        indices_class_0 = [i for i, label in enumerate(labels) if label == 0]\n",
+        "        indices_class_1 = [i for i, label in enumerate(labels) if label == 1]\n",
+        "\n",
+        "        samples_per_class = max_samples // 2\n",
+        "        selected_indices = (indices_class_0[:samples_per_class] +\n",
+        "                          indices_class_1[:samples_per_class])\n",
+        "\n",
+        "        selected_indices = selected_indices[:max_samples]  # Ensure exact count\n",
+        "        audio_files_limited = [audio_files[i] for i in selected_indices]\n",
+        "        labels_limited = [labels[i] for i in selected_indices]\n",
+        "\n",
+        "        print(f\"   Selected {len(audio_files_limited)} files\")\n",
+        "        print(f\"   New label distribution: {np.bincount(labels_limited)}\")\n",
+        "    else:\n",
+        "        audio_files_limited = audio_files\n",
+        "        labels_limited = labels\n",
+        "\n",
+        "    # Initialize processors (already initialized in previous cells)\n",
+        "    print(f\"\\n🔧 Using pre-initialized processors:\")\n",
+        "    print(f\"   ✓ Audio Feature Extractor\")\n",
+        "    print(f\"   ✓ Speech Processor\")\n",
+        "    print(f\"   ✓ BERT Processor\")\n",
+        "\n",
+        "    # Run cross-validation experiment\n",
+        "    print(f\"\\n🚀 Starting Cross-Validation Training...\")\n",
+        "\n",
+        "    try:\n",
+        "        cv_results = train_with_cross_validation(\n",
+        "            audio_files=audio_files_limited,\n",
+        "            labels=labels_limited,\n",
+        "            audio_extractor=extractor,\n",
+        "            speech_processor=speech_processor,\n",
+        "            bert_processor=bert_processor,\n",
+        "            n_folds=3,  # Reduced for faster testing\n",
+        "            epochs_per_fold=15,  # Reduced for faster testing\n",
+        "            batch_size=4,  # Smaller batch size for limited data\n",
+        "            learning_rate=0.001\n",
+        "        )\n",
+        "\n",
+        "        print(f\"\\n✅ Cross-validation completed successfully!\")\n",
+        "\n",
+        "        # Visualize results\n",
+        "        print(f\"\\n📊 Generating visualizations...\")\n",
+        "        visualize_results(cv_results)\n",
+        "\n",
+        "        # Analyze architecture\n",
+        "        analyze_architecture_evolution(cv_results)\n",
+        "\n",
+        "        # Save results\n",
+        "        print(f\"\\n💾 Saving results...\")\n",
+        "        save_results(cv_results)\n",
+        "\n",
+        "        # Print final summary\n",
+        "        print(f\"\\n\" + \"=\"*80)\n",
+        "        print(f\"EXPERIMENT COMPLETED SUCCESSFULLY\")\n",
+        "        print(f\"=\"*80)\n",
+        "        print(f\"🎯 Overall Accuracy: {cv_results['overall_accuracy']:.4f}\")\n",
+        "        print(f\"📈 Mean CV Accuracy: {cv_results['mean_accuracy']:.4f} ± {cv_results['std_accuracy']:.4f}\")\n",
+        "        print(f\"🎪 AUC Score: {cv_results['auc_score']:.4f}\")\n",
+        "        print(f\"=\"*80)\n",
+        "\n",
+        "        return cv_results\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        print(f\"❌ Experiment failed with error: {str(e)}\")\n",
+        "        import traceback\n",
+        "        traceback.print_exc()\n",
+        "        return None\n",
+        "\n",
+        "# ============================================================================\n",
+        "# EXECUTION: Run the main experiment\n",
+        "# ============================================================================\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Verify all components are ready\n",
+        "    components_ready = all([\n",
+        "        'audio_files' in locals() and audio_files,\n",
+        "        'labels' in locals() and labels,\n",
+        "        'extractor' in locals(),\n",
+        "        'speech_processor' in locals(),\n",
+        "        'bert_processor' in locals()\n",
+        "    ])\n",
+        "\n",
+        "    if components_ready:\n",
+        "        print(\"✅ All components ready. Starting experiment...\")\n",
+        "        results = main_experiment()\n",
+        "\n",
+        "        if results:\n",
+        "            print(\"\\n🎉 Experiment completed! Results are stored in the 'results' variable.\")\n",
+        "            print(\"📁 Check /content/drive/MyDrive/Voice/results/ for saved files.\")\n",
+        "        else:\n",
+        "            print(\"\\n❌ Experiment failed. Check the error messages above.\")\n",
+        "    else:\n",
+        "        print(\"❌ Not all components are ready. Please run the previous cells first.\")\n",
+        "        print(\"Missing components:\")\n",
+        "        if 'audio_files' not in locals() or not audio_files:\n",
+        "            print(\"  - audio_files (run dataset exploration)\")\n",
+        "        if 'labels' not in locals() or not labels:\n",
+        "            print(\"  - labels (run dataset exploration)\")\n",
+        "        if 'extractor' not in locals():\n",
+        "            print(\"  - audio feature extractor\")\n",
+        "        if 'speech_processor' not in locals():\n",
+        "            print(\"  - speech processor\")\n",
+        "        if 'bert_processor' not in locals():\n",
+        "            print(\"  - BERT processor\")\n",
+        "\n",
+        "print(\"✓ Cell 9 loaded successfully!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 457
+        },
+        "id": "aZhB-Ah1or9X",
+        "outputId": "199d441f-6071-48cb-853b-ac7d98ad6f0d"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ All components ready. Starting experiment...\n",
+            "================================================================================\n",
+            "STARTING ALZHEIMER'S DISEASE DETECTION EXPERIMENT\n",
+            "================================================================================\n",
+            "📊 Dataset Summary:\n",
+            "   Total audio files: 542\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "UnboundLocalError",
+          "evalue": "cannot access local variable 'labels' where it is not associated with a value",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-e133b1183ce6>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    246\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcomponents_ready\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    247\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"✅ All components ready. Starting experiment...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 248\u001b[0;31m         \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmain_experiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    249\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    250\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-11-e133b1183ce6>\u001b[0m in \u001b[0;36mmain_experiment\u001b[0;34m()\u001b[0m\n\u001b[1;32m    142\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"📊 Dataset Summary:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    143\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"   Total audio files: {len(audio_files)}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 144\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"   Total labels: {len(labels)}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    145\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mUnboundLocalError\u001b[0m: cannot access local variable 'labels' where it is not associated with a value"
+          ]
+        }
+      ]
     }
   ]
 }
