--- a/ADReSSo21.ipynb
+++ b/ADReSSo21.ipynb
@@ -971,35 +971,39 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 401
+          "base_uri": "https://localhost:8080/"
         },
         "id": "56RZ8BRdy4pM",
-        "outputId": "c5b54476-8fb4-461c-bf52-28eea6fad2d0"
+        "outputId": "74b8629c-9a46-42a7-e130-826d00c7e54d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'pydub'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-206380743926>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mspeech_recognition\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msoundfile\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpydub\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAudioSegment\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilterwarnings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ignore'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pydub'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "============================================================\n",
+            "ADReSSo21 AUDIO TRANSCRIPT EXTRACTOR\n",
+            "============================================================\n",
+            "\n",
+            "STEP 1: Mounting Google Drive...\n",
+            "Mounted at /content/drive\n",
+            "✓ Google Drive mounted successfully!\n",
+            "\n",
+            "STEP 2: Installing required packages...\n",
+            "Installing speech recognition and audio processing libraries...\n",
+            "✓ Packages ready (make sure to install them first)\n",
+            "\n",
+            "STEP 3: Setting up paths and configuration...\n",
+            "✓ Base path: /content/drive/MyDrive/Voice/\n",
+            "✓ Extract path: /content/drive/MyDrive/Voice/extracted/\n",
+            "✓ Output path: /content/drive/MyDrive/Voice/transcripts/\n",
+            "\n",
+            "STEP 4: Extracting dataset files...\n",
+            "  Extracting ADReSSo21-progression-train.tgz...\n",
+            "  ✓ ADReSSo21-progression-train.tgz extracted successfully\n",
+            "  Extracting ADReSSo21-progression-test.tgz...\n"
+          ]
         }
       ]
     }
